--- a/src/AplicacionNavegacion/FXMLVentanaHistorial.fxml
+++ b/src/AplicacionNavegacion/FXMLVentanaHistorial.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="456.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.FXMLVentanaHistorialController">
    <children>
       <HBox alignment="CENTER" prefHeight="66.0" prefWidth="607.0">
@@ -39,7 +38,7 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <DatePicker />
+            <DatePicker fx:id="dateFiltro" />
          </children>
       </HBox>
       <Pane prefHeight="296.0" prefWidth="607.0">
