--- a/src/AplicacionNavegacion/FXMLRegister.fxml
+++ b/src/AplicacionNavegacion/FXMLRegister.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.FXMLRegisterController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.FXMLRegisterController">
    <children>
       <HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="95.0" prefWidth="640.0" style="-fx-background-color: #0685BC;">
          <children>
@@ -43,8 +43,8 @@
             <RowConstraints maxHeight="1.7976931348623157E308" minHeight="39.0" prefHeight="57.0" vgrow="ALWAYS" />
             <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="58.0" vgrow="ALWAYS" />
             <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="56.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="56.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="10.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="49.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="9.0" prefHeight="9.0" vgrow="ALWAYS" />
             <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="40.152984619140625" vgrow="ALWAYS" />
             <RowConstraints />
          </rowConstraints>
@@ -110,7 +110,7 @@
                <children>
                   <Button fx:id="bAccept" minWidth="80.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="100.0" style="-fx-background-color: #0685BC;" text="Register" textFill="WHITE">
                      <graphic>
-                        <ImageView fx:id="bAccept" fitHeight="31.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="31.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../icons/accept_white.png" />
                            </image>
@@ -120,9 +120,9 @@
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button fx:id="bAccept" layoutX="547.0" layoutY="10.0" minWidth="80.0" mnemonicParsing="false" prefWidth="100.0" style="-fx-background-color: #0685BC;" text="Cancel" textFill="WHITE">
+                  <Button fx:id="bCancel" layoutX="547.0" layoutY="10.0" minWidth="80.0" mnemonicParsing="false" prefWidth="100.0" style="-fx-background-color: #0685BC;" text="Cancel" textFill="WHITE">
                      <graphic>
-                        <ImageView fx:id="bCancel" fitHeight="31.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="31.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../icons/cancel_white.png" />
                            </image>
