--- a/src/AplicacionNavegacion/FXMLinisesion.fxml
+++ b/src/AplicacionNavegacion/FXMLinisesion.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.FXMLRegisterController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.FXMLinisesionController">
    <children>
       <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #0685BC;">
          <children>
@@ -89,7 +89,7 @@
                <children>
                   <VBox prefHeight="105.0" prefWidth="338.0">
                      <children>
-                        <Label prefHeight="43.0" prefWidth="338.0" text="¿Aún no tienes cuenta?">
+                        <Label prefHeight="43.0" prefWidth="350.0" text="¿Aún no tienes cuenta?">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
@@ -102,7 +102,7 @@
                         <Insets left="50.0" />
                      </opaqueInsets>
                   </VBox>
-                  <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="128.0" text="Registrarse" />
+                  <Button fx:id="bRegister" mnemonicParsing="false" onAction="#registrarse" prefHeight="44.0" prefWidth="128.0" text="Registrarse" />
                </children>
             </HBox>
          </children>
