--- a/src/AplicacionNavegacion/FXMLPruebaRegistro.fxml
+++ b/src/AplicacionNavegacion/FXMLPruebaRegistro.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -160,15 +161,27 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <children>
-                  <HBox alignment="CENTER" maxHeight="200.0" maxWidth="300.0" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="300.0" spacing="20.0">
+                  <HBox alignment="CENTER" spacing="20.0" VBox.vgrow="ALWAYS">
                      <children>
-                        <Button fx:id="bLeft" mnemonicParsing="false" onAction="#handleAvatarLeft" text="&lt;" />
-                        <ImageView fx:id="avatarImage" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../resources/avatarHombre.jpg" />
-                           </image>
-                        </ImageView>
-                        <Button fx:id="bRight" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleAvatarRight" text="&gt;" />
+                        <StackPane fx:id="avatarContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Button fx:id="bRight" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleAvatarRight" text="&gt;" StackPane.alignment="CENTER_RIGHT">
+                                 <StackPane.margin>
+                                    <Insets left="10.0" />
+                                 </StackPane.margin>
+                              </Button>
+                              <ImageView fx:id="avatarImage" cache="true" fitHeight="200.0" fitWidth="200.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
+                                 <image>
+                                    <Image url="@../resources/avatarHombre.jpg" />
+                                 </image>
+                              </ImageView>
+                              <Button fx:id="bLeft" mnemonicParsing="false" onAction="#handleAvatarLeft" text="&lt;" StackPane.alignment="CENTER_LEFT">
+                                 <StackPane.margin>
+                                    <Insets right="10.0" />
+                                 </StackPane.margin>
+                              </Button>
+                           </children>
+                        </StackPane>
                      </children>
                   </HBox>
                   <Button fx:id="subirAvatar" mnemonicParsing="false" onAction="#handleUploadAvatar" text="Subir avatar" />
