--- a/src/AplicacionNavegacion/VentanaAvatarFXML.fxml
+++ b/src/AplicacionNavegacion/VentanaAvatarFXML.fxml
@@ -26,7 +26,7 @@
                 <Label style="-fx-font-size: 16px;" text="Vista previa:" />
                 <ImageView fx:id="previewImage" fitHeight="200" fitWidth="200" preserveRatio="true" style="-fx-effect: dropshadow(gaussian, black, 20, 0, 0, 0);" />
 
-                <Button fx:id="bLoadImage" onAction="#loadIm" text="Cargar imagen..." />
+                <Button fx:id="bLoadImage" onAction="#handleLoadImage" text="Cargar imagen..." />
             </VBox>
         </HBox>
     </center>
@@ -35,8 +35,8 @@
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
-            <Button fx:id="bAccept" onAction="#aceptar" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Aceptar" />
-            <Button fx:id="bCancel" onAction="#cancelar" style="-fx-background-color: #F44336; -fx-text-fill: white;" text="Cancelar" />
+            <Button fx:id="bAccept" onAction="#handleAccept" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Aceptar" />
+            <Button fx:id="bCancel" onAction="#handleCancel" style="-fx-background-color: #F44336; -fx-text-fill: white;" text="Cancelar" />
         </HBox>
     </bottom>
 </BorderPane>
