--- a/src/AplicacionNavegacion/VentanaAvatarFXML.fxml
+++ b/src/AplicacionNavegacion/VentanaAvatarFXML.fxml
@@ -11,27 +11,10 @@
 
 <BorderPane prefHeight="450" prefWidth="600" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.AvatarChooserController">
     <top>
-        <Label style="-fx-font-size: 24px; -fx-padding: 15; -fx-background-color: #2196F3; -fx-text-fill: white;" text="Seleccionar avatar" BorderPane.alignment="CENTER" />
+        <Label prefHeight="77.0" prefWidth="600.0" style="-fx-font-size: 24px; -fx-padding: 15; -fx-background-color: #2196F3; -fx-text-fill: white;" text="Seleccionar avatar" BorderPane.alignment="CENTER" />
     </top>
-    <center>
-        <HBox spacing="20">
-            <padding>
-                <Insets bottom="20" left="20" right="20" top="20" />
-            </padding>
-            <VBox spacing="10">
-                <Label style="-fx-font-size: 16px;" text="Avatares disponibles:" />
-            <ListView fx:id="listaAvatares" prefHeight="200.0" prefWidth="200.0" />
-            </VBox>            
-            <VBox spacing="10">
-                <Label style="-fx-font-size: 16px;" text="Vista previa:" />
-                <ImageView fx:id="previewImage" fitHeight="200" fitWidth="200" preserveRatio="true" style="-fx-effect: dropshadow(gaussian, black, 20, 0, 0, 0);" />
-
-                <Button fx:id="bLoadImage" onAction="#handleLoadImage" text="Cargar imagen..." />
-            </VBox>
-        </HBox>
-    </center>
     <bottom>
-        <HBox alignment="CENTER" spacing="20">
+        <HBox alignment="CENTER_RIGHT" spacing="20">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
@@ -39,4 +22,34 @@
             <Button fx:id="bCancel" onAction="#handleCancel" style="-fx-background-color: #F44336; -fx-text-fill: white;" text="Cancelar" />
         </HBox>
     </bottom>
+   <left>
+      <HBox prefHeight="320.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+              <HBox spacing="20">
+                  <padding>
+                      <Insets bottom="20" left="20" right="20" top="20" />
+                  </padding>            
+                  <VBox spacing="10">
+                      <Label style="-fx-font-size: 16px;" text="Vista previa:" />
+                      <ImageView fx:id="previewImage" fitHeight="235.0" fitWidth="200" preserveRatio="true" style="-fx-effect: dropshadow(gaussian, black, 20, 0, 0, 0);" />
+                  </VBox>
+                  <VBox prefHeight="270.0" prefWidth="400.0" spacing="10">
+                      <Label style="-fx-font-size: 16px;" text="Avatares disponibles:" />
+                  <ListView fx:id="listaAvatares" prefHeight="172.0" prefWidth="356.0" />
+                  <HBox alignment="TOP_RIGHT" prefHeight="58.0" prefWidth="340.0" spacing="15.0">
+                     <children>
+            
+                            <Button fx:id="bLoadImage" onAction="#handleLoadImage" text="Cargar imagen..." />
+                        <Button fx:id="eliminarAvatar" mnemonicParsing="false" onAction="#handleDelete" text="Eliminar" />
+                        <Button fx:id="renombrarAvatar" mnemonicParsing="false" onAction="#handleRename" text="Renombrar" />
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="5.0" right="10.0" />
+                     </padding>
+                  </HBox>
+                  </VBox>
+              </HBox>
+         </children>
+      </HBox>
+   </left>
 </BorderPane>
