--- a/src/AplicacionNavegacion/FXMLVentanaHistorial.fxml
+++ b/src/AplicacionNavegacion/FXMLVentanaHistorial.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="456.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.FXMLVentanaHistorialController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="456.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaHistorialController">
    <children>
       <HBox alignment="CENTER" prefHeight="66.0" prefWidth="607.0">
          <children>
@@ -38,17 +38,17 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <DatePicker fx:id="dateFiltro" />
+            <DatePicker fx:id="dateFilter" />
          </children>
       </HBox>
       <Pane prefHeight="296.0" prefWidth="607.0">
          <children>
-            <TableView fx:id="tableHistorial" layoutX="16.0" prefHeight="294.0" prefWidth="575.0">
+            <TableView fx:id="tableHistory" layoutX="16.0" prefHeight="294.0" prefWidth="575.0">
               <columns>
-                <TableColumn fx:id="colFecha" prefWidth="127.5" text="Fecha" />
-                <TableColumn fx:id="colAciertos" prefWidth="120.5" text="Aciertos" />
-                  <TableColumn fx:id="colFallos" minWidth="4.5" prefWidth="144.5" text="Fallos" />
-                  <TableColumn fx:id="colTasa" prefWidth="181.5" text="Tasa de aciertos" />
+                <TableColumn fx:id="colDate" prefWidth="127.5" text="Fecha" />
+                <TableColumn fx:id="colHits" prefWidth="120.5" text="Aciertos" />
+                  <TableColumn fx:id="colFaults" minWidth="4.5" prefWidth="144.5" text="Fallos" />
+                  <TableColumn fx:id="colRate" prefWidth="181.5" text="Tasa de aciertos" />
               </columns>
                <opaqueInsets>
                   <Insets right="30.0" />
@@ -77,7 +77,7 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="207.0" spacing="25.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <children>
-                        <Button fx:id="bCancel1" minWidth="80.0" mnemonicParsing="false" prefWidth="100.0" style="-fx-background-color: #0685BC;" text="Volver" textFill="WHITE">
+                        <Button fx:id="bVolver" minWidth="80.0" mnemonicParsing="false" prefWidth="100.0" style="-fx-background-color: #0685BC;" text="Volver" textFill="WHITE">
                            <font>
                               <Font size="14.0" />
                            </font>
