--- a/src/AplicacionNavegacion/FXMLPruebaRegistro.fxml
+++ b/src/AplicacionNavegacion/FXMLPruebaRegistro.fxml
@@ -37,8 +37,8 @@
       </HBox>
       <GridPane hgap="12.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="351.0" prefWidth="673.0" vgap="12.0" VBox.vgrow="ALWAYS">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="454.6666259765625" minWidth="-Infinity" prefWidth="357.33331298828125" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="203.3333638509115" prefWidth="300.66667683919275" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="454.6666259765625" minWidth="-Infinity" prefWidth="361.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="203.3333638509115" prefWidth="278.5" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="49.5" vgrow="NEVER" />
@@ -124,9 +124,9 @@
                   <Insets left="12.0" />
                </GridPane.margin>
             </HBox>
-            <HBox alignment="CENTER_RIGHT" prefHeight="30.0" spacing="25.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="7" GridPane.vgrow="NEVER">
+            <HBox alignment="CENTER_RIGHT" minWidth="-Infinity" prefHeight="40.0" prefWidth="253.0" spacing="25.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="7" GridPane.vgrow="NEVER">
                <children>
-                  <Button fx:id="bAccept" maxHeight="40.0" maxWidth="100.0" minHeight="40.0" minWidth="80.0" mnemonicParsing="false" onAction="#handleBAcceptOnAction" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: #0685BC;" text="Register" textFill="WHITE">
+                  <Button fx:id="bAccept" maxHeight="50.0" maxWidth="154.0" minHeight="40.0" minWidth="80.0" mnemonicParsing="false" onAction="#handleBAcceptOnAction" prefHeight="60.0" prefWidth="125.0" style="-fx-background-color: #0685BC;" text="Registrarse" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -138,7 +138,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="bCancel" maxHeight="40.0" maxWidth="100.0" minHeight="40.0" minWidth="80.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: #0685BC;" text="Cancel" textFill="WHITE">
+                  <Button fx:id="bCancel" maxHeight="40.0" maxWidth="163.0" minHeight="40.0" minWidth="80.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="116.0" style="-fx-background-color: #0685BC;" text="Cancelar" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
