--- a/src/AplicacionNavegacion/FXMLVentanaMapa.fxml
+++ b/src/AplicacionNavegacion/FXMLVentanaMapa.fxml
@@ -26,7 +26,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" stylesheets="@../resources/estilos.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaMapaController">
+<VBox fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" stylesheets="@../resources/estilos.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaMapaController">
    <children>
       <MenuBar>
         <menus>
@@ -142,9 +142,9 @@
             <Region prefHeight="30.0" prefWidth="333.0" />
             <MenuButton maxHeight="30.0" maxWidth="131.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="131.0" text="Nickname">
               <items>
-                <MenuItem mnemonicParsing="false" text="Modificar perfil" />
-                  <MenuItem mnemonicParsing="false" text="Historial" />
-                  <MenuItem mnemonicParsing="false" text="Cerrar sesión" />
+                <MenuItem fx:id="modificarPerfil" mnemonicParsing="false" text="Modificar perfil" />
+                  <MenuItem fx:id="historial" mnemonicParsing="false" onAction="#abrirHistorial" text="Historial" />
+                  <MenuItem fx:id="cerrarSesion" mnemonicParsing="false" text="Cerrar sesión" />
               </items>
                <graphic>
                   <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
@@ -182,7 +182,7 @@
                <content>
                   <Pane>
                      <children>
-                        <ImageView fitHeight="5760.0" fitWidth="8962.0" layoutY="7.0" pickOnBounds="true">
+                        <ImageView fitHeight="5760.0" fitWidth="8962.0" layoutY="7.0" onMouseMoved="#showPosition" pickOnBounds="true">
                            <image>
                               <Image url="@../resources/carta_nautica.jpg" />
                            </image>
@@ -202,14 +202,17 @@
             </ScrollPane>
          </items>
       </SplitPane>
-      <HBox alignment="CENTER_LEFT">
+      <HBox alignment="CENTER_LEFT" spacing="10.0">
          <children>
             <Label fx:id="mousePosition" minHeight="-Infinity" minWidth="-Infinity" prefWidth="171.0" text="SceneX:     ScenY:     " wrapText="true" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets left="5.0" />
                </HBox.margin></Label>
             <Region HBox.hgrow="ALWAYS" />
-            <Label text="Zoom" />
+            <Label text="Zoom">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin></Label>
             <Button mnemonicParsing="false" onAction="#zoomOut" text="-" />
             <Slider fx:id="zoom_slider" HBox.hgrow="SOMETIMES" />
             <Button mnemonicParsing="false" onAction="#zoomIn" text="+" />
