--- a/src/AplicacionNavegacion/VentanaAvatarFXML.fxml
+++ b/src/AplicacionNavegacion/VentanaAvatarFXML.fxml
@@ -6,7 +6,10 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane prefHeight="450" prefWidth="600" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.AvatarChooserController">
@@ -25,30 +28,48 @@
    <left>
       <HBox prefHeight="320.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-              <HBox spacing="20">
-                  <padding>
-                      <Insets bottom="20" left="20" right="20" top="20" />
-                  </padding>            
-                  <VBox spacing="10">
-                      <Label style="-fx-font-size: 16px;" text="Vista previa:" />
-                      <ImageView fx:id="previewImage" fitHeight="235.0" fitWidth="200" preserveRatio="true" style="-fx-effect: dropshadow(gaussian, black, 20, 0, 0, 0);" />
-                  </VBox>
-                  <VBox prefHeight="270.0" prefWidth="400.0" spacing="10">
-                      <Label style="-fx-font-size: 16px;" text="Avatares disponibles:" />
-                  <ListView fx:id="listaAvatares" prefHeight="172.0" prefWidth="356.0" />
-                  <HBox alignment="TOP_RIGHT" prefHeight="58.0" prefWidth="340.0" spacing="15.0">
-                     <children>
-            
-                            <Button fx:id="bLoadImage" onAction="#handleLoadImage" text="Cargar imagen..." />
-                        <Button fx:id="eliminarAvatar" mnemonicParsing="false" onAction="#handleDelete" text="Eliminar" />
-                        <Button fx:id="renombrarAvatar" mnemonicParsing="false" onAction="#handleRename" text="Renombrar" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="5.0" right="10.0" />
-                     </padding>
-                  </HBox>
-                  </VBox>
-              </HBox>
+            <GridPane prefHeight="308.0" prefWidth="600.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>            
+                     <VBox spacing="10">
+                         <Label style="-fx-font-size: 16px;" text="Vista previa:">
+                        <VBox.margin>
+                           <Insets left="10.0" top="10.0" />
+                        </VBox.margin>
+                     </Label>
+                         <ImageView fx:id="previewImage" fitHeight="235.0" fitWidth="200" preserveRatio="true" style="-fx-effect: dropshadow(gaussian, black, 20, 0, 0, 0);">
+                        <VBox.margin>
+                           <Insets left="30.0" />
+                        </VBox.margin>
+                     </ImageView>
+                     </VBox>
+                     <VBox prefHeight="308.0" prefWidth="333.0" spacing="10" GridPane.columnIndex="1">
+                         <Label style="-fx-font-size: 16px;" text="Avatares disponibles:">
+                        <VBox.margin>
+                           <Insets left="10.0" top="10.0" />
+                        </VBox.margin>
+                     </Label>
+                     <ListView fx:id="listaAvatares" prefHeight="172.0" prefWidth="356.0" />
+                     <HBox alignment="TOP_RIGHT" prefHeight="58.0" prefWidth="340.0" spacing="15.0">
+                        <children>
+               
+                                        <Button fx:id="bLoadImage" onAction="#handleLoadImage" text="Cargar imagen..." />
+                           <Button fx:id="eliminarAvatar" mnemonicParsing="false" onAction="#handleDelete" text="Eliminar" />
+                           <Button fx:id="renombrarAvatar" mnemonicParsing="false" onAction="#handleRename" text="Renombrar" />
+                        </children>
+                        <padding>
+                           <Insets bottom="10.0" left="5.0" right="10.0" />
+                        </padding>
+                     </HBox>
+                     </VBox>
+               </children>
+            </GridPane>
          </children>
       </HBox>
    </left>
