--- a/src/AplicacionNavegacion/VentanaAvatarFXML.fxml
+++ b/src/AplicacionNavegacion/VentanaAvatarFXML.fxml
@@ -28,7 +28,7 @@
    <left>
       <HBox prefHeight="320.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane prefHeight="308.0" prefWidth="600.0">
+            <GridPane prefHeight="308.0" prefWidth="591.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -55,7 +55,7 @@
                            <Insets left="10.0" top="10.0" />
                         </VBox.margin>
                      </Label>
-                     <ListView fx:id="listaAvatares" prefHeight="172.0" prefWidth="356.0" />
+                     <ListView fx:id="listaAvatares" prefHeight="172.0" prefWidth="286.0" />
                      <HBox alignment="TOP_RIGHT" prefHeight="58.0" prefWidth="340.0" spacing="15.0">
                         <children>
                
@@ -67,10 +67,16 @@
                            <Insets bottom="10.0" left="5.0" right="10.0" />
                         </padding>
                      </HBox>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
                      </VBox>
                </children>
             </GridPane>
          </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
       </HBox>
    </left>
 </BorderPane>
