--- a/src/AplicacionNavegacion/VentanaRegistroFXML.fxml
+++ b/src/AplicacionNavegacion/VentanaRegistroFXML.fxml
@@ -61,7 +61,7 @@
                               </Separator>
                               <VBox prefHeight="200.0" prefWidth="300.0" spacing="3.0">
                                  <children>
-                                    <Label styleClass="form-label" text="Label" />
+                                    <Label styleClass="form-label" text="Fecha de nacimiento" />
                                     <DatePicker fx:id="dateField" maxHeight="40.0" minHeight="40.0" prefHeight="32.0" prefWidth="280.0">
                                        <styleClass>
                                           <String fx:value="date-picker" />
@@ -76,7 +76,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="283.0" prefWidth="180.0" spacing="15.0" styleClass="avatar-box">
                            <children>
-                              <ImageView fitHeight="221.0" fitWidth="316.0" pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fx:id="avatarImage" fitHeight="221.0" fitWidth="316.0" pickOnBounds="true" preserveRatio="true" />
                               <Button fx:id="elegirAvatar" mnemonicParsing="false" onAction="#handleChooseAvatar" prefHeight="40.0" prefWidth="156.0" styleClass="button-primary" text="Elegir avatar" />
                            </children>
                         </VBox>
